--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   contained_tab_bar_view: ^0.8.0
   flutter_signin_button: ^2.0.0
+  flutter_svg: ^1.0.3
+  convex_bottom_bar: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
